Reescribí el texto de la seccion Contacto

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <h2 class="contact-titulo">EMAIL:</h2>
                     <p class="contact-texto">dsstornelli@gmail.com</p>
                 
-                    <p class="contact-texto">Deje su mensaje y con gusto le responderé</p><br><br>
+                    <p class="contact-texto">Ingrese su nombre y su email y deje su mensaje, con gusto le responderé.</p><br><br>
 
                     <a class="social-icon" href="https://github.com/danistorn" target="_blank">
                         <ion-icon name="logo-github"></ion-icon>
